# Lab_Programmazione

./: CMakeLists.txt  File.cpp  File.h  FileLoader.cpp  FileLoader.h  Observer.h  Subject.h  View.cpp  View.h  main.cpp
test/: CMakeLists.txt  runAllTests.cpp  testFile.cpp  testFileLoader.cpp  testObserver.cpp  testObserver.h
test/lib/googletest/googlemock/include/gmock/: gmock-spec-builders.h
test/lib/googletest/googlemock/src/: gmock-spec-builders.cc  gmock.cc
test/lib/googletest/googlemock/test/: gmock-cardinalities_test.cc  gmock-function-mocker_test.cc  gmock-internal-utils_test.cc  gmock-matchers_test.cc  gmock-more-actions_test.cc
